--- a/src/it/touch/invoker.properties
+++ b/src/it/touch/invoker.properties
@@ -1,6 +1,6 @@
 # A comma or space separated list of goals/phases to execute, may
 # specify an empty list to execute the default goal of the IT project
-invoker.goals.1 = archetype:generate -DinteractiveMode=false -DarchetypeGroupId=${project.groupId} -DarchetypeArtifactId=${project.artifactId} -DarchetypeVersion=${project.version} -DgroupId=org.apache.maven.plugins -DartifactId=touch-beanshell-maven-plugin -Dversion=0.1-SNAPSHOT -Dpackage=org.apache.maven.plugins.beanshell.touch -DgoalName=touch -DgoalPrefix=touch -DpluginName="Beanshell Touch Maven Plugin" -DpluginDescription="Maven plugin using the Beanshell Touch task to touch a given file" -DparameterName=file -DparameterType=java.io.File -DparameterDescription="File to be touched"
+invoker.goals.1 = archetype:generate -DinteractiveMode=false -DarchetypeGroupId=${project.groupId} -DarchetypeArtifactId=${project.artifactId} -DarchetypeVersion=${project.version} -DgroupId=org.apache.maven.plugins -DartifactId=touch-beanshell-maven-plugin -Dversion=0.1-SNAPSHOT -Dpackage=org.apache.maven.plugins.beanshell.touch -DgoalName=touch -DgoalPrefix=touch -DpluginName="Beanshell Touch Maven Plugin" -DpluginDescription="Maven plugin using Beanshell to touch a given file" -DparameterName=file -DparameterType=java.io.File -DparameterDescription="File to be touched"
 
 invoker.goals.2 = clean install site --file touch-beanshell-maven-plugin/pom.xml
 
