--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -51,11 +51,6 @@
 			<artifactId>bsh</artifactId>
 			<version>1.3.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-script-beanshell</artifactId>
-			<version>2.2.1</version>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -65,6 +60,7 @@
 				<version>3.2</version>
 				<configuration>
 					<goalPrefix>${goalPrefix}</goalPrefix>
+					<helpPackageName>${groupId}.help</helpPackageName>
 					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
 				</configuration>
 				<executions>
