syncronise with maven-archetype-ant-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>maven-archetype</packaging>
 	<name>Maven Archetype Beanshell-based Maven Plugin</name>
 	<description>Maven Archetype to generate an Beanshell-based Maven Plugin</description>
-	<url>http://genthaler.github.com/maven-archetype-beanshell-plugin/</url>
+	<url>http://genthaler.github.com/${project.artifactId}/</url>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
 		<license>
@@ -22,22 +22,32 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection>scm:git:https://github.com/genthaler/maven-archetype-beanshell-plugin.git</connection>
-		<developerConnection>scm:git:https://github.com/genthaler/maven-archetype-beanshell-plugin.git</developerConnection>
+		<connection>scm:git:https://github.com/genthaler/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:https://github.com/genthaler/${project.artifactId}.git</developerConnection>
 		<tag>HEAD</tag>
-		<url>http://github.com/genthaler/maven-archetype-beanshell-plugin</url>
+		<url>https://github.com/genthaler/${project.artifactId}</url>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
-		<url>https://github.com/genthaler/maven-archetype-beanshell-plugin/issues</url>
+		<url>https://github.com/genthaler/${project.artifactId}/issues</url>
 	</issueManagement>
 	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub ${project.artifactId} Repository</name>
+			<url>https://raw.github.com/genthaler/${project.artifactId}/mvn-repo</url>
+		</repository>
+		<snapshotRepository>
+			<id>github</id>
+			<name>GitHub ${project.artifactId} Repository</name>
+			<url>https://raw.github.com/genthaler/${project.artifactId}/mvn-repo</url>
+		</snapshotRepository>
 		<site>
 			<id>github</id>
 			<name>GitHub</name>
-			<url>http://genthaler.github.com/maven-archetype-beanshell-plugin/</url>
+			<url>http://genthaler.github.com/${project.artifactId}/</url>
 		</site>
-		<downloadUrl>https://github.com/genthaler/maven-archetype-beanshell-plugin/archive/master.zip</downloadUrl>
+		<downloadUrl>https://raw.github.com/genthaler/${project.artifactId}/mvn-repo/org/apache/maven/archetypes/${project.artifactId}/${project.version}/${project.artifactId}-${project.version}.jar</downloadUrl>
 	</distributionManagement>
 	<properties>
 		<antVersion>1.8</antVersion>
@@ -55,6 +65,10 @@
 		</extensions>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.7</version>
+				</plugin>
 				<plugin>
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>2.6</version>
@@ -91,9 +105,19 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.2</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration />
@@ -110,35 +134,32 @@
 			</plugin>
 			<plugin>
 				<groupId>com.github.github</groupId>
-				<artifactId>downloads-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>install</phase>
-						<goals>
-							<goal>upload</goal>
-						</goals>
-						<configuration>
-							<description>${project.version} release of ${project.name}</description>
-							<override>true</override>
-							<includeAttached>true</includeAttached>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>site</phase>
+						<id>site</id>
+						<phase>site-deploy</phase>
 						<goals>
 							<goal>site</goal>
 						</goals>
+						<configuration>
+							<message>Creating site for ${project.version}</message>
+						</configuration>
+					</execution>
+					<execution>
+						<id>repo</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<configuration>
+							<message>Maven artifacts for ${project.version}</message>
+							<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+							<branch>refs/heads/mvn-repo</branch>
+							<merge>true</merge>
+						</configuration>
 					</execution>
 				</executions>
-				<configuration>
-					<message>Creating site for ${project.version}</message>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.google.code.sortpom</groupId>
@@ -175,7 +196,6 @@
 					</execution>
 				</executions>
 				<configuration>
-					<!-- <projectsDirectory>src/it</projectsDirectory> -->
 					<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
 					<cloneClean>true</cloneClean>
 					<pomIncludes>
@@ -189,6 +209,12 @@
 						<sitePluginVersion>3.0</sitePluginVersion>
 						<antVersion>${antVersion}</antVersion>
 					</filterProperties>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<configuration>
+					<skipDeploy>true</skipDeploy>
 				</configuration>
 			</plugin>
 		</plugins>
