Add java.awt.headless=true to invoker plugin invocations

--- a/src/it/touch/invoker.properties
+++ b/src/it/touch/invoker.properties
@@ -19,6 +19,7 @@ invoker.goals.2 = clean install site --file touch-beanshell-maven-plugin/pom.xml
 
 # The value for the environment variable MAVEN_OPTS
 #invoker.mavenOpts = -Dfile.encoding=UTF-16 -Xms32m -Xmx256m
+invoker.mavenOpts = -Djava.awt.headless=true
 
 # Possible values are "fail-fast" (default), "fail-at-end" and "fail-never"
 #invoker.failureBehavior = fail-never
