--- a/src/it/touch/invoker.properties
+++ b/src/it/touch/invoker.properties
@@ -1,6 +1,25 @@
+###
+# #%L
+# Maven Archetype Beanshell-based Maven Plugin
+# %%
+# Copyright (C) 2012 - 2013 Günther Enthaler
+# %%
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# 
+#      http://www.apache.org/licenses/LICENSE-2.0
+# 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+# #L%
+###
 # A comma or space separated list of goals/phases to execute, may
 # specify an empty list to execute the default goal of the IT project
-invoker.goals.1 = archetype:generate -DinteractiveMode=false -DarchetypeGroupId=${project.groupId} -DarchetypeArtifactId=${project.artifactId} -DarchetypeVersion=${project.version} -DgroupId=org.apache.maven.plugins -DartifactId=touch-beanshell-maven-plugin -Dversion=0.1-SNAPSHOT -Dpackage=org.apache.maven.plugins.beanshell.touch -DgoalName=touch -DgoalPrefix=touch -DpluginName="Beanshell Touch Maven Plugin" -DpluginDescription="Maven plugin using Beanshell to touch a given file" -DparameterName=file -DparameterType=java.io.File -DparameterDescription="File to be touched"
+invoker.goals.1 = org.apache.maven.plugins:maven-archetype-plugin:2.2:generate -DinteractiveMode=false -DarchetypeGroupId=${project.groupId} -DarchetypeArtifactId=${project.artifactId} -DarchetypeVersion=${project.version} -DgroupId=org.apache.maven.plugins -DartifactId=touch-beanshell-maven-plugin -Dversion=0.1-SNAPSHOT -Dpackage=org.apache.maven.plugins.beanshell.touch -DgoalName=touch -DgoalPrefix=touch -DpluginName="Beanshell Touch Maven Plugin" -DpluginDescription="Maven plugin using Beanshell to touch a given file" -DparameterName=file -DparameterType=java.io.File -DparameterDescription="File to be touched" -Djava.awt.headless=true
 
 invoker.goals.2 = clean install site --file touch-beanshell-maven-plugin/pom.xml
 
