--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk7
 env: MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
 install: mvn dependency:resolve
-script: mvn clean install
+script: mvn clean verify
 branches:
   only:
     - master
