Fixed generated integration test

--- a/src/main/resources/archetype-resources/src/it/touch/invoker.properties
+++ b/src/main/resources/archetype-resources/src/it/touch/invoker.properties
@@ -4,7 +4,7 @@
 
 # A comma or space separated list of goals/phases to execute, may
 # specify an empty list to execute the default goal of the IT project
-invoker.goals.1 = org.apache.maven.plugins:${goalName}-beanshell-maven-plugin:0.1-SNAPSHOT:${goalName} -D${parameterExpression}=touched.txt
+invoker.goals.1 = ${groupId}:${artifactId}:${version}:${goalName} -D${parameterExpression}=touched.txt
 
 # Optionally, a list of goals to run during further invocations of Maven
 #invoker.goals.2 = ${project.groupId}:${project.artifactId}:${project.version}:run
