--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -8,8 +8,7 @@
 	<packaging>maven-plugin</packaging>
 	<name>${pluginName}</name>
 	<description>${pluginDescription}</description>
-	<!-- FIXME change it to the project's website -->
-	<url>http://maven.apache.org</url>
+	<url>FIXME change it to the project's website</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -144,6 +143,10 @@
 	</build>
 	<reporting>
 		<plugins>
+			<plugin>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
 			<plugin>
 				<artifactId>maven-plugin-plugin</artifactId>
 				<version>3.2</version>
