--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -155,6 +155,11 @@
 						<reports>
 							<report>report</report>
 						</reports>
+						<configuration>
+							<goalPrefix>${goalPrefix}</goalPrefix>
+							<helpPackageName>${groupId}.help</helpPackageName>
+							<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+						</configuration>
 					</reportSet>
 				</reportSets>
 			</plugin>
