--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-
 .project
-<<<<<<< HEAD
 /target
-
 *.prefs
-=======
 .c9revisions
->>>>>>> fb1be8380156e2a3c48fdc8a72d9207643418c3c
 /.settings
 /pom.xml.bak
-
 release.properties
+*.releaseBackup
